# vado

./: .gitignore  LICENSE  README.md  cabal.project  default.nix  shell.nix  vado.cabal
exe-src/: Test.hs  Vamount.hs
nix/: hix.nix  sources.json
src/: Main.hs  Vamount.hs
src/System/Process/: Vado.hs
