name: vado
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
homepage: https://github.com/hamishmack/vado
package-url: https://github.com/hamishmack/vado
synopsis: Runs commands on remote machines using ssh
description: Lets you quickly run ssh on a machine that you have an sshfs connection to.
             It works out the username, host and the directory on the host based on the current directory and the output of 'mount'.
category: Development
author: Hamish Mackenzie
data-dir: ""

library
    build-depends: base -any, QuickCheck -any, attoparsec >=0.10.4.0 && <0.11,
                   directory >=1.1.0.0 && <1.3, filepath >=1.2.0.0 && <1.4,
                   process >=1.0.1.5 && <1.3, text >=0.11.3.1 && <0.12
    exposed-modules: System.Process.Vado
    exposed: True
    buildable: True
    hs-source-dirs: src

executable vado
    build-depends: base -any, QuickCheck -any, attoparsec >=0.10.4.0 && <0.11,
                   directory >=1.1.0.0 && <1.3, filepath >=1.2.0.0 && <1.4,
                   process >=1.0.1.5 && <1.3, text >=0.11.3.1 && <0.12
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: System.Process.Vado

executable vamount
    build-depends: base -any, QuickCheck -any, attoparsec >=0.10.4.0 && <0.11,
                   directory >=1.1.0.0 && <1.3, filepath >=1.2.0.0 && <1.4,
                   process >=1.0.1.5 && <1.3, text >=0.11.3.1 && <0.12
    main-is: Vamount.hs
    buildable: True
    hs-source-dirs: src
    other-modules: System.Process.Vado
    
test-suite test-vado
    build-depends: base -any, QuickCheck -any, attoparsec >=0.10.4.0 && <0.11,
                   directory >=1.1.0.0 && <1.3, filepath >=1.2.0.0 && <1.4,
                   process >=1.0.1.5 && <1.3, text >=0.11.3.1 && <0.12
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    hs-source-dirs: src
